# pageproc

./: .gitignore  CMakeLists.txt  README.md  TODO  USE  data.csv  pdfproc.cpp  plan  requirements.txt
doc/: paper.bib  paper.tex  presentation.tex
pageproc/: __init__.py  recognition.py  segmentation.py
pdfproc/: __main__.py
python/: install.sh
sample_configurations/: histogram_RF.config  img_attrs_RF.config  img_attrs_one_rule.config  pixels_NN.config  simple_NN.config  simple_RF.config  simple_one_rule.config
segment_classify/: __main__.py
segment_classify/classifiers/: RF.py  neural_network.py  one_rule.py
segment_classify/preprocessors/: histogram.py  img_attrs.py  pixels_grayscale.py  simple.py
src/: _matpart.hpp  control.hpp  debug.cpp  debug.hpp  document.hpp  document_reader.hpp  document_union.hpp  document_writer.hpp  element.cpp  element.hpp  img_debug.cpp  img_debug.hpp  matpart.cpp  matpart.hpp  page.hpp  recognition.cpp  recognition.hpp  segment.hpp  segmentation.hpp  segmented_page.hpp  settings.cpp  settings.hpp
src/classificators/: classificator.hpp  recognition.cpp  recognition.hpp
src/segmentators/: segmentation.cpp  segmentator.hpp
test/: compile_test.sh  mytest.cpp  test.cpp  test.sh  test_matpart  test_matpart.cpp  test_settings.cpp
